<?xml version="1.0"?>
<package format="2">
  <name>nuturtle_description</name>
  <version>0.0.1</version>
  <description>Differential drive robot my_turtlebot3, based on turtlebot3_burger</description>

  <!-- One maintainer tag required, multiple allowed, one aperson per tag -->
  <maintainer email="yaelbshalom@gmail.com">Yael Ben Shalom</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>Apache License 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/nuturtle_description</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->

  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <!-- <exec_depend>turtlebot3</exec_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->

  </export>
</package>
