<?xml version="1.0"?>
<package format="2">
  <name>nuturtle_description</name>
  <version>0.0.1</version>
  <description>Differential drive robot my_turtlebot3, based on turtlebot3_burger</description>

  <!-- One maintainer tag required, multiple allowed, one aperson per tag -->
  <maintainer email="yaelbshalom@gmail.com">Yael Ben Shalom</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>Apache License 2.0</license>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>


</package>
