<?xml version="1.0"?>
<package format="2">
  <name>nuturtle_description</name>
  <version>0.0.1</version>
  <description>Differential drive robot my_turtlebot3, based on turtlebot3_burger</description>

  <!-- Package maintainer and author-->
  <maintainer email="yaelbshalom@gmail.com">Yael Ben Shalom</maintainer>
  <author email="yaelbshalom@gmail.com">Yael Ben Shalom</author>

  <!-- Package license -->
  <license>Apache License 2.0</license>

  <!-- Package dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

</package>