<?xml version="1.0"?>
<package format="2">
  <name>nuturtle_robot</name>
  <version>0.0.1</version>
  <description>Store the code that interacts with the turtlebot hardware</description>

  <!-- Package maintainer and author-->
  <maintainer email="yaelbshalom@gmail.com">Yael Ben Shalom</maintainer>
  <author email="yaelbshalom@gmail.com">Yael Ben Shalom</author>

  <!-- Package license -->
  <license>Apache License 2.0</license>

  <!-- Package dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catch_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rigid2d</build_depend>
  <build_depend>nuturtlebot</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <!-- <exec_depend>geometry_msgs</exec_depend> -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  
  <test_depend>rostest</test_depend>

  <depend>roscpp</depend>

</package>
